# PdfReader

./: .gitignore  README.md  requirements.txt  setup.cfg
ChineseNMT-master/: main.py
service/: retrieval_request.py  retrieval_server.py  test_jie.py  translation_request.py
source/: A2A2.py  config.txt
source/TR_Utils/: history_file.py  translate.py  watch_clip.py
source/retrieval/: crawlers.py  similar_model.py
