[metadata]
name=pdfReader
version=0.1.0
author=SUAI
author_email = 2027407077@stu.suda.edu.cn
description = todo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JayLee1002/PdfReader
license = Not open source

[options]
packages = find:
python_requires = >= 3.8.0, < 3.12
dev = 
    PyQt5 >= 5.15.10
    PyQtWebEngine >= 5.15.6
    torch ~= 1.10.0
    transformers >= 4.34.1
    sentence-transformers >= 2.2.2
    spicy >= 0.16.0
    bs4 <= 0.0.1
    pandas >= 2.1.2
